...
    func reloadCollectionView()
    
}

extension SearchPresenter {
    fileprivate enum Constants {
        static let navigationTitle: String = "iTunes Search"
        static let cellCornerRadius: Double = 12
        static let favoriteImageName: String = "heart.fill"
        static let backButtonTitle: String = "Back"
        static let cellHeightFactor: Double = 3.5
        static let delayTime: Double = 0.5
        static let defaultIndexPathIndex = 1000 // indicates thet no music playing
    }
}

...
