...
        static let progressBarPadding: Double = 40
        static let progressBarHeight: Double = 35
        static let setTimeConstant: Int = 5
        static let normalHeartImage: String = "heart"
        static let filledHeartImage: String = "heart.fill"
        static let defaultTime: String = "00:00"
        static let playImageName: String = "play.fill"
        static let stopImageName: String = "stop.fill"
    }
    
}

final class DetailPresenter{
...
